client/src/scss/components/_bob.scss
@use '../abstracts' as *;

// .link {
// 	padding: 15px 30px;
// 	margin: 10px;
// 	display: inline-block;
// 	color: #000;
// 	background: #ffce54;
// 	text-decoration: none;
// }

// .link:hover {
// 	text-decoration: none;
// 	color: #000;
// }

/*===================*/
/* BOB
/*===================*/

@-webkit-keyframes bob-on-hover {
	0% {
		-webkit-transform: translateY(-4px);
		transform: translateY(-4px);
	}
	50% {
		-webkit-transform: translateY(0px);
		transform: translateY(0px);
	}
	100% {
		-webkit-transform: translateY(-4px);
		transform: translateY(-4px);
	}
}
@keyframes bob-on-hover {
	0% {
		-webkit-transform: translateY(-4px);
		transform: translateY(-4px);
	}
	50% {
		-webkit-transform: translateY(0px);
		transform: translateY(0px);
	}
	100% {
		-webkit-transform: translateY(-4px);
		transform: translateY(-4px);
	}
}
@-webkit-keyframes bob-on-hover-float {
	100% {
		-webkit-transform: translateY(-4px);
		transform: translateY(-4px);
	}
}
@keyframes bob-on-hover-float {
	100% {
		-webkit-transform: translateY(-4px);
		transform: translateY(-4px);
	}
}
.bob {
	display: inline-block;
	vertical-align: middle;
	// -webkit-transform: perspective(1px) translateZ(0);
	// transform: perspective(1px) translateZ(0);
	// box-shadow: 0 0 1px rgba(0, 0, 0, 0);
	-webkit-animation-name: bob-on-hover-float, bob-on-hover;
	animation-name: bob-on-hover-float, bob-on-hover;
	-webkit-animation-duration: .3s, 1.5s;
	animation-duration: .3s, 1.5s;
	-webkit-animation-delay: 0s, .3s;
	animation-delay: 0s, .3s;
	-webkit-animation-timing-function: ease-out, ease-in-out;
	animation-timing-function: ease-out, ease-in-out;
	-webkit-animation-iteration-count: 1, infinite;
	animation-iteration-count: 1, infinite;
	-webkit-animation-fill-mode: forwards;
	animation-fill-mode: forwards;
	-webkit-animation-direction: normal, alternate;
	animation-direction: normal, alternate;
}
// .bob-on-hover:hover,
// .bob-on-hover:focus,
// .bob-on-hover:active {
// 	-webkit-animation-name: bob-on-hover-float, bob-on-hover;
// 	animation-name: bob-on-hover-float, bob-on-hover;
// 	-webkit-animation-duration: .3s, 1.5s;
// 	animation-duration: .3s, 1.5s;
// 	-webkit-animation-delay: 0s, .3s;
// 	animation-delay: 0s, .3s;
// 	-webkit-animation-timing-function: ease-out, ease-in-out;
// 	animation-timing-function: ease-out, ease-in-out;
// 	-webkit-animation-iteration-count: 1, infinite;
// 	animation-iteration-count: 1, infinite;
// 	-webkit-animation-fill-mode: forwards;
// 	animation-fill-mode: forwards;
// 	-webkit-animation-direction: normal, alternate;
// 	animation-direction: normal, alternate;
// }

